Added More Pics

--- a/index.html
+++ b/index.html
@@ -369,11 +369,76 @@
         </div>
         <div class="alltexts" id="text11">
             <span id="close" onclick="closePopup()">&times;</span>
-            <img id="firstimg" src="Pic1.jpg" alt="Your Net Not Working :(">
+            <img id="firstimg" src="Images/Pic1.jpg" alt="Your Net Not Working :(">
             <div id="nextimg">
-                <img id="pic2" src="pic2.jpg" alt="">
+                <img id="pic2" src="Images/pic2.jpg" alt="">
                 <span id="next" onclick="nextimage()">></span>
                 <span id="previousimg" onclick="previousimg()"><</span>
+            </div>
+            <div id="nextimg3">
+                <img id="pic3" src="Images/pic3.jpg" alt="">
+                <span id="pic3next" onclick="pic3()">></span>
+                <span id="pic3previous" onclick="pic2()"><</span>
+            </div>
+            <div id="nextimg4">
+                <img src="Images/pic4.jpg" alt="" id="pic4">
+                <span id="pic4next" onclick="pic4()">></span>
+                <span id="pic4previous" onclick="pic3previous()"><</span>
+            </div>
+            <div id="nextimg5">
+                <img src="Images/pic5.jpg" alt="" id="pic5">
+                <span id="pic5next" onclick="pic5()">></span>
+                <span id="pic5previous" onclick="pic4previous()"><</span>
+            </div>
+            <div id="nextimg6">
+                <img src="Images/pic6.jpg" alt="" id="pic6">
+                <span id="pic6next" onclick="pic6()">></span>
+                <span id="pic6previous" onclick="pic5previous()"><</span>
+            </div>
+            <div id="nextimg7">
+                <img src="Images/pic7.jpg" alt="" id="pic7">
+                <span id="pic7next" onclick="pic7()">></span>
+                <span id="pic7previous" onclick="pic6previous()"><</span>
+            </div>
+            <div id="nextimg8">
+                <img src="Images/pic8.jpg" alt="" id="pic8">
+                <span id="pic8next" onclick="pic8()">></span>
+                <span id="pic8previous" onclick="pic7previous()"><</span>
+            </div>
+            <div id="nextimg9">
+                <img src="Images/pic9.jpg" alt="" id="pic9">
+                <span id="pic9next" onclick="pic9()">></span>
+                <span id="pic9previous" onclick="pic8previous()"><</span>
+            </div>
+            <div id="nextimg10">
+                <img src="Images/pic10.jpg" alt="" id="pic10">
+                <span id="pic10next" onclick="pic10()">></span>
+                <span id="pic10previous" onclick="pic9previous()"><</span>
+            </div>
+            <div id="nextimg11">
+                <img src="Images/pic11.jpg" alt="" id="pic11">
+                <span id="pic11next" onclick="pic11()">></span>
+                <span id="pic11previous" onclick="pic10previous()"><</span>
+            </div>
+            <div id="nextimg12">
+                <img src="Images/pic12.jpg" alt="" id="pic12">
+                <span id="pic12next" onclick="pic12()">></span>
+                <span id="pic12previous" onclick="pic11previous()"><</span>
+            </div>
+            <div id="nextimg13">
+                <img src="Images/pic13.jpg" alt="" id="pic13">
+                <span id="pic13next" onclick="pic13()">></span>
+                <span id="pic13previous" onclick="pic12previous()"><</span>
+            </div>
+            <div id="nextimg14">
+                <img src="Images/pic14.jpg" alt="" id="pic14">
+                <span id="pic14next" onclick="pic14()">></span>
+                <span id="pic14previous" onclick="pic13previous()"><</span>
+            </div>
+            <div id="nextimg15">
+                <img src="Images/pic15.jpg" alt="" id="pic15">
+                <span id="pic15next" onclick="pic15()">></span>
+                <span id="pic15previous" onclick="pic14previous()"><</span>
             </div>
         </div>
         <div class="alltexts" id="text12">
