just updated a new video of ours :)

--- a/index.html
+++ b/index.html
@@ -444,6 +444,11 @@
         <div class="alltexts" id="text12">
             <span id="close" onclick="closePopup()">&times;</span>
             <video id="video" controls><source src="video.mp4" type="video/mp4"></video>
+            <div id="nextvideo">
+                <video id="video2" controls><source src="video2.mp4" type="video/mp4"></video>
+                <span id="nextvideo2" onclick="nextvideo()">></span>
+                <span id="previousvideo" onclick="previousvideo()"><</span>
+            </div>
         </div>
         <div class="alltexts" id="text13">
             <span id="close" onclick="closePopup()">&times;</span>
