Added more Images for my waifu :)

--- a/index.html
+++ b/index.html
@@ -282,7 +282,8 @@
             <span id="close" onclick="closePopup()">&times;</span>
             <h2>Love Talks</h2>
             <h6>Hloo ksee hh.. pyar bhri baate krni h mere baby ko 😉.. acha chlo krteee h.. bohtt saari cheeze yd dilata hu chloo..    <br>
-                Acha aapko yd h jbb apno nee first tm baat krni chalu ki thii kse krte the aap ki frnd h apnee or sb orr ab dekhoo aapka hubby aapke liyee aapse itnii jaada durr sirf aapke liye study krne gyaa h ydd rkhna aayega aapka hubby aapko lene promisee h hubbyk kaa.. <br>Acha orr wo ydd h jb apne sathm baithe hote the class ke andrr m aapko dekhta rehta tha tbb sochoo kitna acha lgtaa thaa or firr uske baad apno nee video call krna chalu kiya hayy itna acha lgta h aapse baat krke.. or orr wo yd h aapko jb apno ne pahli baar asee sex or pornn wali baat ki thi kitnaa blush kr rhe the dono or ab dekhoo ksee rehte h best couples h apnee 💘.. orr wo to kse bhul skte h jb apno ne hand pkdee thee desk nichee or aapne ek baari asee apne pet pe rkh liyaa tha mera hand fir uske baad kitnaa kuch hua tha ksee roye the apne dono class m😂 kitaa mja kiya tha😉😉 <br>Ache or wo to bilkul ni bhul skte apnee first tm hug or kiss ki thi jb apnoo nee wo bhi lip walii kitnaa acha feel hua tha hnaa bss thodaa timee babyy hubby ke liyee krloo fir ase hi rhenge itne hi khush or best lifee pka leke jaaunga m aapke.. yrr itne tm mtlb jo bhi apno ne baat ki h chahe kitna hi kuch hua ho roe ho lekin apne hmesha sath rhe h ek dusre ko chahe kitna bhi kuch hua ho or kitni mushkilo se baat ki h apno ne ase ruk ruk bolke or kitnii saari video call or wsee call pe baat ki h sochoo or jb mne ghrpe btaya lekin dekh abhi bhi apne dono sath h or kitna pyar krte h isliyee bs hmesaa apne ase sath rhenge or itne hi pyar krenge ek dusre ko💘 <br> loveeee uuuuuuu soooooo soooo sooooooo muchhhhhh meraaaa shonaaa meraa babuuu merii motoooooo merii kittuu meraa babyyy merii cutee see kitkitt mera bchaaa meri darlingg dearr honeyyy loveee uu bohtt bohttt bohttt saraaaaaaaaaaaa💘💘💘💘💘💘💘💘💘💘💘💘💘💘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘 loveee u alwaysssssss.. misss u naaa yrrrrr iss tm shyd m kuch bhi kr rha hou prr yd rkhnaa tu mere dill m h or hmeshaa meree dill m hi rhegi or asa ek bhi din ni jaayega jis din teri yd ni aayegii😘😘😘😘😘😘 <br> or bracelet smbhal kee rkhnaa babyyy 😉😉😉😉 or shyd is tm jb tu ye pdh rhi h pkaa keh skta hu m ki teri yd aa rhi hogi mereko or m bracelet ko pkdke baitha hounga ya kiss kr rha hounga.. or kuch ni krunga m aapke bina wahape mt tension lo aap hi soft krnaa 🤫🤫 <br> Loveee u alwaysssssssssssssss meriiii jaaannnnn loveee u loveee uuuuu loveee uuuu loveee uuuuuu loveee uuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuu loveeeeeeeeeeee uuuuuuuuuuuuuuuuuuuuuuu I loveeee uuuuuuuuuuuuuuuuuuuuu bohtttt saraaaaaaaaaaaaaaaaa yelooo itni saari kissiii😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘 </h6>
+                Acha aapko yd h jbb apno nee first tm baat krni chalu ki thii kse krte the aap ki frnd h apnee or sb orr ab dekhoo aapka hubby aapke liyee aapse itnii jaada durr sirf aapke liye study krne gyaa h ydd rkhna aayega aapka hubby aapko lene promisee h hubbyk kaa.. <br>Acha orr wo ydd h jb apne sathm baithe hote the class ke andrr m aapko dekhta rehta tha tbb sochoo kitna acha lgtaa thaa or firr uske baad apno nee video call krna chalu kiya hayy itna acha lgta h aapse baat krke.. or orr wo yd h aapko jb apno ne pahli baar asee sex or pornn wali baat ki thi kitnaa blush kr rhe the dono or ab dekhoo ksee rehte h best couples h apnee 💘.. orr wo to kse bhul skte h jb apno ne hand pkdee thee desk nichee or aapne ek baari asee apne pet pe rkh liyaa tha mera hand fir uske baad kitnaa kuch hua tha ksee roye the apne dono class m😂 kitaa mja kiya tha😉😉 <br>Ache or wo to bilkul ni bhul skte apnee first tm hug or kiss ki thi jb apnoo nee wo bhi lip walii kitnaa acha feel hua tha hnaa bss thodaa timee babyy hubby ke liyee krloo fir ase hi rhenge itne hi khush or best lifee pka leke jaaunga m aapke.. yrr itne tm mtlb jo bhi apno ne baat ki h chahe kitna hi kuch hua ho roe ho lekin apne hmesha sath rhe h ek dusre ko chahe kitna bhi kuch hua ho or kitni mushkilo se baat ki h apno ne ase ruk ruk bolke or kitnii saari video call or wsee call pe baat ki h sochoo or jb mne ghrpe btaya lekin dekh abhi bhi apne dono sath h or kitna pyar krte h isliyee bs hmesaa apne ase sath rhenge or itne hi pyar krenge ek dusre ko💘 <br> loveeee uuuuuuu soooooo soooo sooooooo muchhhhhh meraaaa shonaaa meraa babuuu merii motoooooo merii kittuu meraa babyyy merii cutee see kitkitt mera bchaaa meri darlingg dearr honeyyy loveee uu bohtt bohttt bohttt saraaaaaaaaaaaa💘💘💘💘💘💘💘💘💘💘💘💘💘💘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘 loveee u alwaysssssss.. misss u naaa yrrrrr iss tm shyd m kuch bhi kr rha hou prr yd rkhnaa tu mere dill m h or hmeshaa meree dill m hi rhegi or asa ek bhi din ni jaayega jis din teri yd ni aayegii😘😘😘😘😘😘 <br> or bracelet smbhal kee rkhnaa babyyy 😉😉😉😉 or shyd is tm jb tu ye pdh rhi h pkaa keh skta hu m ki teri yd aa rhi hogi mereko or m bracelet ko pkdke baitha hounga ya kiss kr rha hounga.. or kuch ni krunga m aapke bina wahape mt tension lo aap hi soft krnaa 🤫🤫 <br> Loveee u alwaysssssssssssssss meriiii jaaannnnn loveee u loveee uuuuu loveee uuuu loveee uuuuuu loveee uuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuu loveeeeeeeeeeee uuuuuuuuuuuuuuuuuuuuuuu I loveeee uuuuuuuuuuuuuuuuuuuuu bohtttt saraaaaaaaaaaaaaaaaa yelooo itni saari kissiii😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘 <br> Are good night to bola hi ni motoo kooo acha ab bol deta hu fir neend ni aayegi wrna mere babu ko😘😘 <br>
+                Good Night, Take Care, Sweet Dreams meraaa bchaaaaaa aaram see sonaa ache ache spnee lekeeee or fikrr mtt krnaaa motooo 😘😘😘😘😘😘😘😘😘😘😘 Gn Tc Sd againn meriii jannn loveee u alwaysssssss 😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘💓💓💓💓💓💓💓💓💓💓💓💓💓💓💓💓💓💓💓💓💓😘😘😘😘😘😘😘💓💓💓💓😘😘😘💓💓💓😘😘💓💓😘😘😘😘💓💓💓😘💓💓💓😘😘💓💓💓💓💓💓💓💓💓💓💓😘😘😘😘😘😘😘😘😘💓💓💓💓💓💓💓😘😘💓💓💓💓💓💓💓😘😘😘😘😘😘😘😘😘😘😘</h6>
         </div>
         <div class="alltexts" id="text1">
             <span id="close" onclick="closePopup()">&times;</span>
@@ -439,6 +440,31 @@
                 <img src="Images/pic15.jpg" alt="" id="pic15">
                 <span id="pic15next" onclick="pic15()">></span>
                 <span id="pic15previous" onclick="pic14previous()"><</span>
+            </div>
+            <div id="nextimg16">
+                <img src="Images/pic16.png" alt="" id="pic16">
+                <span id="pic16next" onclick="pic16()">></span>
+                <span id="pic16previous" onclick="pic15previous()"><</span>
+            </div>
+            <div id="nextimg17">
+                <img src="Images/pic17.jpg" alt="" id="pic17">
+                <span id="pic17next" onclick="pic17()">></span>
+                <span id="pic17previous" onclick="pic16previous()"><</span>
+            </div>
+            <div id="nextimg18">
+                <img src="Images/pic18.jpg" alt="" id="pic18">
+                <span id="pic18next" onclick="pic18()">></span>
+                <span id="pic18previous" onclick="pic17previous()"><</span>
+            </div>
+            <div id="nextimg19">
+                <img src="Images/pic19.jpg" alt="" id="pic19">
+                <span id="pic19next" onclick="pic19()">></span>
+                <span id="pic19previous" onclick="pic18previous()"><</span>
+            </div>
+            <div id="nextimg20">
+                <img src="Images/pic20.png" alt="" id="pic20">
+                <span id="pic20next" onclick="pic20()">></span>
+                <span id="pic20previous" onclick="pic19previous()"><</span>
             </div>
         </div>
         <div class="alltexts" id="text12">
